Add resize method to ProgramWindow

--- a/index.html
+++ b/index.html
@@ -8,35 +8,37 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="content"></div>
-    <h2>Terms and Conditions</h2>
-    <h3>Please read our Terms and Conditions and sign below.</h3>
-    <section id="top-section">
-      <div id="first-name-whole">
-        <div id="first-name-title">
-          <label for="">First name</label>
-          <p>*</p>
+    <div id="content">
+      <h2 id="main-title">Terms and Conditions</h2>
+      <h3 id="title-desc">
+        Please read our Terms and Conditions and sign below.
+      </h3>
+      <section id="top-section">
+        <div id="first-name-whole">
+          <div id="first-name-title">
+            <label for="">First name</label>
+            <p>*</p>
+          </div>
+          <input type="text" name="" id="" />
         </div>
-        <input type="text" name="" id="" />
-      </div>
-      <div id="last-name-whole">
-        <div id="last-name-title">
-          <label for="">Last name</label>
-          <p>*</p>
+        <div id="last-name-whole">
+          <div id="last-name-title">
+            <label for="">Last name</label>
+            <p>*</p>
+          </div>
+          <input type="text" name="" id="" />
         </div>
-        <input type="text" name="" id="" />
-      </div>
-      <div id="email-whole">
-        <div id="email-title">
-          <label for="">Email</label>
-          <p>*</p>
+        <div id="email-whole">
+          <div id="email-title">
+            <label for="">Email</label>
+            <p>*</p>
+          </div>
+          <input type="email" name="" id="" />
         </div>
-        <input type="email" name="" id="" />
-      </div>
-    </section>
-    <section>
-      <h4>Terms and Conditions</h4>
-      <p>
+      </section>
+      <section>
+        <h4>Terms and Conditions</h4>
+        <textarea name="" id="" cols="30" rows="10">
         Last updated: (add date) Please read these Terms and Conditions
         ("Terms", "Terms and Conditions") carefully before using the
         http://www.mywebsite.com (change this) website and the My Mobile App
@@ -69,19 +71,21 @@
         days' notice prior to any new terms taking effect. What constitutes a
         material change will be determined at our sole discretion. Contact Us If
         you have any questions about these Terms, please contact us.
-      </p>
-    </section>
-    <section id="bottom-section">
-      <div id="signature">
-        <div>
-          <p>Please sign here</p>
-          <p>*</p>
+      </textarea
+        >
+      </section>
+      <section id="bottom-section">
+        <div id="signature">
+          <div id="signature-title">
+            <p>Please sign here</p>
+            <p>*</p>
+          </div>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
         </div>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-      </div>
-      <input type="button" value="clear signature pad" />
-      <input type="button" value="Submit" />
-    </section>
+        <input type="button" value="clear signature pad" />
+        <input type="button" value="Submit" />
+      </section>
+    </div>
     <script src="loops.js"></script>
     <script src="main.js"></script>
   </body>
