Add changeWindow function

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
           <input type="email" name="" id="" />
         </div>
       </section>
-      <section>
-        <h4>Terms and Conditions</h4>
-        <textarea name="" id="" cols="30" rows="10">
-        Last updated: (add date) Please read these Terms and Conditions
+      <section id="middle-section">
+        <h4 id="terms-title">Terms and Conditions</h4>
+        <textarea name="" id="middle-terms" cols="30" rows="10">
+        Last updated:
+        
+        (add date) Please read these Terms and Conditions
         ("Terms", "Terms and Conditions") carefully before using the
         http://www.mywebsite.com (change this) website and the My Mobile App
         (change this) mobile application (the "Service") operated by My Company
