Complete Terms and Conditions form

--- a/index.html
+++ b/index.html
@@ -16,40 +16,45 @@
       <section id="top-section">
         <div id="first-name-whole">
           <div id="first-name-title">
-            <label for="">First name</label>
-            <p>*</p>
+            <label for="first-name-input" id="first-name-label"
+              >First name</label
+            >
+            <p id="first-name-star">*</p>
           </div>
-          <input type="text" name="" id="" />
+          <input type="text" name="first-name-input" id="first-name-input" />
         </div>
         <div id="last-name-whole">
           <div id="last-name-title">
-            <label for="">Last name</label>
-            <p>*</p>
+            <label for="last-name-input" id="last-name-label">Last name</label>
+            <p id="last-name-star">*</p>
           </div>
-          <input type="text" name="" id="" />
+          <input type="text" name="last-name-input" id="last-name-input" />
         </div>
         <div id="email-whole">
           <div id="email-title">
-            <label for="">Email</label>
-            <p>*</p>
+            <label id="email-label" for="">Email</label>
+            <p id="email-star">*</p>
           </div>
-          <input type="email" name="" id="" />
+          <input type="email" name="" id="email-input" />
         </div>
       </section>
       <section id="middle-section">
         <h4 id="terms-title">Terms and Conditions</h4>
         <textarea name="" id="middle-terms" cols="30" rows="10">
-        Last updated:
+        Last updated:(add date)
         
-        (add date) Please read these Terms and Conditions
+        Please read these Terms and Conditions
         ("Terms", "Terms and Conditions") carefully before using the
         http://www.mywebsite.com (change this) website and the My Mobile App
         (change this) mobile application (the "Service") operated by My Company
-        (change this) ("us", "we", or "our"). Your access to and use of the
+        (change this) ("us", "we", or "our").
+        
+        Your access to and use of the
         Service is conditioned on your acceptance of and compliance with these
         Terms. These Terms apply to all visitors, users and others who access or
         use the Service. By accessing or using the Service you agree to be bound
         by these Terms. If you disagree with any part of the terms then you may
+
         not access the Service. Purchases If you wish to purchase any product or
         service made available through the Service ("Purchase"), you may be
         asked to supply certain information relevant to your Purchase including,
@@ -58,6 +63,7 @@
         in advance on a recurring … Content Our Service allows you to post,
         link, store, share and otherwise make available certain information,
         text, graphics, videos, or other material ("Content"). You are
+
         responsible for the … Links To Other Web Sites Our Service may contain
         links to third­party web sites or services that are not owned or
         controlled by My Company (change this). My Company (change this) has no
@@ -65,11 +71,13 @@
         policies, or practices of any third party web sites or services. You
         further acknowledge and agree that My Company (change this) shall not be
         responsible or liable, directly or indirectly, for any damage or loss
+
         caused or alleged to be caused by or in connection with use of or
         reliance on any such content, goods or services available on or through
         any such web sites or services. Changes We reserve the right, at our
         sole discretion, to modify or replace these Terms at any time. If a
         revision is material we will try to provide at least 30 (change this)
+
         days' notice prior to any new terms taking effect. What constitutes a
         material change will be determined at our sole discretion. Contact Us If
         you have any questions about these Terms, please contact us.
@@ -77,15 +85,14 @@
         >
       </section>
       <section id="bottom-section">
-        <div id="signature">
-          <div id="signature-title">
-            <p>Please sign here</p>
-            <p>*</p>
-          </div>
-          <textarea name="" id="" cols="30" rows="10"></textarea>
+        <div id="signature-title">
+          <label for="initials" id="signature-label"
+            >Please add initials here:</label
+          >
+          <p id="signature-star">*</p>
+          <input id="initials" name="initials" type="text" />
         </div>
-        <input type="button" value="clear signature pad" />
-        <input type="button" value="Submit" />
+        <input type="button" value="Submit" id="submit" />
       </section>
     </div>
     <script src="loops.js"></script>
