Trying things out without xcode

--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
     />
   </head>
   <body>
+    <p
+      style="
+        font-family: Georgia, serif;
+        font-size: 16px;
+        color: #333333;
+        line-height: 2;
+        text-indent: 2em;
+        margin: 0;
+      "
+    >
+      text
+    </p>
+    <p
+      style="
+        font-family: Georgia, serif;
+        font-size: 16px;
+        color: #333333;
+        line-height: 2;
+        text-indent: 2em;
+        margin: 0;
+      "
+    >
+      text
+    </p>
+    <p
+      style="
+        font-family: Georgia, serif;
+        font-size: 16px;
+        color: #333333;
+        line-height: 2;
+        text-indent: 2em;
+        margin: 0;
+      "
+    >
+      text
+    </p>
     <section class="section">
       <div class="container mb-5">
         <h1 class="title is-1">Fake Python</h1>
